tests/errors/missing_val_56/e9.src
.IPPcode21

CREATEFRAME
DEFVAR TF@var
PUSHFRAME
DEFVAR LF@v1
STRLEN LF@v1 LF@var
